# RAG_Chatbot

./: main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: Arif_resume_updated.docx  Arif_resume_updated.txt  Biodata.txt  honor_award.txt  other_experience.txt  professional_experience.txt  publications.txt  research_experience.txt  skills.txt  url.txt
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/node/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
